刷新了MSI文件

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+90c3db3376bd2d51a88ee6e43c15958b43d9c716 add README.md.
+b09fc83802a6c05b6547b866974877b7490534d8 增加了config.json赋值变量的功能和交互式环境实时查看数据的功能
+b4097a9b17cd6bb2630099b63cf861457e95a6d4 把LICENSE从GPLv3改为LGPLv3
+074a91008a3f5845cb1f79ff3c70fbe3bc7d7ae0 部署后文件夹的布局从one dir改为零散布局
+980f780971aea84341d4dd7d3e249c0018a01c4c 停用了Pyforest，并改用Pyinstaller打包，使用Advanced Installer制作MSI安装包
 a752c0f45510d9e92a719f4a141fe7eeb5e38f3b 优化启动速度（将模块引入Requierments类）
 a97538cfdd354d77bf95d4ef753f54c6cb7d000f Update msi file
 e484cef1f66aef8ab43ab274df2d9a616f55dba4 Update msi file
