--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+3965a70151c92f7e117513c52ebf00e768d0b251 因未知原因重启项目
+e407a0127c013445d0998364bcc9b4afe97eb074 Merge branch 'main' of gitee.com:HardyProjects/clathon
+0d583da473b96345b77b780f401b783af85d7c84 增加了main函数
+70fceb7bce72b3272fe896c6dce13f421a03d269 Build MSI
+746d121724823d84bad6bce1510062bbd50c7280 Build好了
+770a60bcaae9b4aef4b14d782502232f924f1e59 把提示符改为IPython的提示符
+5b74c8bc172cef6781a59d336f8123fdb4ddc30e 1.20.4
+94872efc2e8049dfa34f75d4b207b67cf2271bf3 Merge branch 'main' of gitee.com:MinePy/clathon
+14631f38dc461295ccc5b51827284fec36c7ec81 1.20.3正式版
+7a2b879b0acf9583022b35d16e73439ef727c0e7 制作新功能之前的一次准备
+e45c0d2b46c982bbdb834c623abc4a87a0dcdc88 修改README.md
+8ff27d0f10da62c5e153376d16915a60d0629c8c 增加了更多Shell功能
+9d634a9c6531cc25b659855a3d9935d810c3e07d 刷新了MSI文件
 90c3db3376bd2d51a88ee6e43c15958b43d9c716 add README.md.
 b09fc83802a6c05b6547b866974877b7490534d8 增加了config.json赋值变量的功能和交互式环境实时查看数据的功能
 b4097a9b17cd6bb2630099b63cf861457e95a6d4 把LICENSE从GPLv3改为LGPLv3
